--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,87 @@
-{"name":"Manifold Finance","network":"1","symbol":"FOLD","terms":"https://github.com/manifoldfinance/legal","skin":"airswap","avatar":"ipfs://QmNZHNfMTZjYkLzCRNPFpuAjy3z3GbLhnD39moUW5XzjUC","twitter":"foldfinance","website":"https://manifoldfinance.com/","github":"manifoldfinance","private":false,"admins":[],"moderators":[],"members":[],"categories":["service","protocol"],"plugins":{},"children":[],"voting":{"hideAbstain":false},"strategies":[{"name":"erc20-balance-of","network":"1","params":{"symbol":"DAI","address":"0x6B175474E89094C44Da98b954EedeAC495271d0F","decimals":18}}],"validation":{"name":"any","params":{}},"voteValidation":{"name":"any","params":{}},"filters":{"minScore":0,"onlyMembers":false},"treasuries":[]}
+[
+  {
+    "name": "needs-triage",
+    "description": "applied to all new customer/user issues. Removed after triage occurs.",
+    "color": "54c1f0"
+  },
+  {
+    "name": "blocked",
+    "description": "indicates there are blocking issues that need to be addressed before progress can be made",
+    "color": "7a2f4e"
+  },
+  {
+    "name": "p0",
+    "description": "This issue is critical and should be worked on immediately. (fixed in days/weeks)",
+    "color": "e88438"
+  },
+  {
+    "name": "p1",
+    "description": "This issue is very important and will be addressed within the team planning window.",
+    "color": "e8e538"
+  },
+  {
+    "name": "p2",
+    "description": "This issue we intend to address but we have can live without it (fixed in months/quarters)",
+    "color": "38e843"
+  },
+  {
+    "name": "q422",
+    "description": "",
+    "color": "f49988"
+  },
+  {
+    "name": "q123",
+    "description": "",
+    "color": "f49988"
+  },
+  {
+    "name": "q223",
+    "description": "",
+    "color": "F49988"
+  },
+  {
+    "name": "q-next",
+    "description": "",
+    "color": "db4253"
+  },
+  {
+    "name": "security",
+    "description": "a security sensitive issue",
+    "color": "c70223"
+  },
+  {
+    "name": "cve",
+    "description": "known vulnerability detected",
+    "color": "fa2302"
+  },
+  {
+    "name": "on-duty",
+    "description": "issues that should be handled during an on-duty shift",
+    "color": "faee02"
+  },
+  {
+    "name": "incident",
+    "description": "production incident handled by on-call",
+    "color": "fa2302"
+  },
+  {
+    "name": "post-mortem",
+    "description": "post-mortem related issues and PRs",
+    "color": "c40866"
+  },
+  {
+    "name": "request-version-update",
+    "description": "request for a newer version of a package",
+    "color": "6ded73"
+  },
+  {
+    "name": "roadmap",
+    "description": "used by teams to indicate issues that we represent in a customer roadmap view",
+    "color": "385be8"
+  },
+  {
+    "name": "out-of-slo",
+    "description": "to mark an issue or pr out of the slo bot",
+    "color": "bcbcbc"
+  }
+]
